# FIFA_BOT

./: app.py  backend.py  chatbot.ipynb  chatbot_ipynb_to_pyhton.py  data.ipynb  main.py  main_func.py  pyproject.toml  readme.txt  shipments.csv  textsplitter.txt
data/: 02_Argentina_vs_Australia.txt  03_France_vs_Poland.txt  04_England_vs_Senegal.txt  07_Morocco_vs_Spain.txt  argentina_croatia_SF.txt  argentina_france_F.txt  croatia_brazil_Q.txt  england_france_Q.txt  franve_morroco_SF.txt  portugal_morroco_Q.txt
data/round16_full/: 01_Netherlands_vs_USA.txt  05_Japan_vs_Croatia.txt  06_Brazil_vs_South_Korea.txt  08_Portugal_vs_Switzerland.txt
